// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Axis Examples when zooming for should render as expected as zoom [0, 1] 1`] = `
{
  "height": 25,
  "width": 721,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.2, 0.5] 1`] = `
{
  "height": 25,
  "width": 721,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.3, 0.35] 1`] = `
{
  "height": 25,
  "width": 721,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.4, 0.4125] 1`] = `
{
  "height": 25,
  "width": 731.6666666666667,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.25, 0.35] 1`] = `
{
  "height": 25,
  "width": 721.6666666666667,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.35, 0.375] 1`] = `
{
  "height": 25,
  "width": 721,
  "x": 59,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.45, 0.45625] 1`] = `
{
  "height": 25,
  "width": 721,
  "x": 59,
  "y": 493,
}
`;
